[ADD] Mockup App  HTML/CSS layout

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -1,9 +1,17 @@
 /*! ==========================================================================
  * Facet StyleSheet
  * "Stay Frosty"
- * 
+ *
  * version:	0.1.0
  * author:	Franky Martinez <frankymartz@gmail.com>
  * ========================================================================== */
+@charset "UTF-8"
 
 // Base
+@require "./component/_base"
+
+// Layout
+
+// Component
+@require "./component/_calender"
+@require "./component/_notes"
