--- a/src/stylus/component/_base.styl
+++ b/src/stylus/component/_base.styl
@@ -6,7 +6,6 @@
 
 body
 	position: relative
-	margin-top: 1rem
 	background-color: $color.background.body
 	color: $color.text.base
 	font-family: $font.sans
@@ -21,8 +20,11 @@ body
 	background-color: $color.background.selection
 
 #app
-	//clearfix()
+	clearfix()
+	box-sizing: border-box
 	margin: 0 auto
+	padding: 0 1.25rem
+	padding-top: 1rem
 	position: relative
 	max-width: 1200px
 	min-width: 800px
