--- a/src/stylus/component/_base.styl
+++ b/src/stylus/component/_base.styl
@@ -24,10 +24,10 @@ body
 	box-sizing: border-box
 	margin: 0 auto
 	padding: 0 1.25rem
-	padding-top: 1rem
+	//padding-top: 1rem
 	position: relative
 	max-width: 1200px
-	min-width: 800px
+	min-width: 900px
 	width: 100%
-	height: 95vh
+	height: 100vh
 	overflow: hidden
