--- a/src/stylus/component/_notes.styl
+++ b/src/stylus/component/_notes.styl
@@ -17,10 +17,58 @@
 
 @require "../global/_all"
 
+$_note_foot_height = 3rem
+
 #note
 	box-sizing: border-box
+	float: right
 	width: 35%
 	height: 100%
-	float: right
+	min-height: 650px
 	background-color: $color.background.notes
 	border: 1px dotted $color.notes.border;
+	padding-left: 2.75rem
+	padding-right: 1.25rem
+
+.note-wrap
+	width: 100%
+	height: 100%
+	min-height: 100%
+	max-height: 100%
+	margin-bottom: -($_note_foot_height)
+	&:after
+		content: ""
+		display: block
+		height: $_note_foot_height
+
+.note_head
+	width: 100%
+	padding-top: 1.5em
+	padding-bottom: 1em
+	font-size: 1.125rem
+	font-weight: 300
+	& i
+		font-weight: 700
+
+.note_head_btn_add
+	border: none;
+	background-color: transparent
+	padding: 0
+	margin: 0
+	vertical-align: top
+	font-weight: 500
+	font-size: 2rem
+	line-height: 1.25rem
+	float: right
+	color: $color.link.default
+	&:hover
+		color: $color.link.hover
+	&:before
+		content: "+"
+
+.note_list
+	list-style: none;
+	padding: 0
+
+.note_foot
+	height: $_note_foot_height
