[UPDATE] Notes panel Stylesheet Finish

--- a/src/stylus/component/_base.styl
+++ b/src/stylus/component/_base.styl
@@ -19,12 +19,11 @@ body
 	color: $color.background.body
 	background-color: $color.background.selection
 
-#app
+.app
 	clearfix()
 	box-sizing: border-box
 	margin: 0 auto
 	padding: 0 1.25rem
-	//padding-top: 1rem
 	position: relative
 	max-width: 1200px
 	min-width: 900px
