--- a/src/stylus/global/_font.styl
+++ b/src/stylus/global/_font.styl
@@ -3,5 +3,6 @@
  * -------------------------------------------------------------------------- */
 
 $font = {
-	sans: "Roboto"\, "Lucida Grand"\, "Helvetica Neue"\, Helvetica\, Arial\, sans-serif
+	sans: "Roboto"\, "Lucida Grand"\, "Helvetica Neue"\, Helvetica\, Arial\, sans-serif,
+	serif: 'Roboto Slab'\, "Roboto"\, "Lucida Grand"\, "Helvetica Neue"\, Helvetica\, Arial\, sans-serif
 }
