--- a/src/stylus/component/_calender.styl
+++ b/src/stylus/component/_calender.styl
@@ -20,13 +20,15 @@
 
  @require "../global/_all"
 
-#cal
+.cal
 	display: inline-block
 	box-sizing: border-box
 	width: 65%
 	//background-color: yellow
 	border-right: 1rem solid $color.background.body
 
+
+/*! Calendar: Head ---------------------------------------------------------- */
 .cal_head
 	height: 8.5rem
 	text-align: center
@@ -55,6 +57,8 @@
 .cal_head_btn-next
 	float: right
 
+
+/*! Calendar: Table---------------------------------------------------------- */
 .cal_table
 	width: 100%
 	height: 100%
@@ -62,6 +66,12 @@
 	& td, & th
 		width: 14.28571429%
 
+.cal_table_col-edge
+	background-color: $color.table.background.cell
+	color: $color.table.text.weekend
+
+
+/*! Calendar: Table::Head --------------------------------------------------- */
 .cal_table_head
 	text-align: right
 	text-transform: capitalize
@@ -75,10 +85,7 @@
 			background-color: $color.background.body
 
 
-.cal_table_col-edge
-	background-color: $color.table.background.cell
-	color: $color.table.text.weekend
-
+/*! Calendar: Table::Body --------------------------------------------------- */
 .cal_table_body td
 	border: 1px solid $color.table.border.default
 	height: 5rem
