--- a/src/stylus/component/_notes.styl
+++ b/src/stylus/component/_notes.styl
@@ -17,34 +17,43 @@
 
 @require "../global/_all"
 
-$_note_foot_height = 3rem
+$_note = {
+	padding: {
+		left: 2.75rem,
+		right: 1.25rem
+	},
+	foot: {
+		height: 4rem
+	}
+}
 
-#note
+.note
 	box-sizing: border-box
 	float: right
 	width: 35%
 	height: 100%
 	min-height: 650px
-	background-color: $color.background.notes
-	border: 1px dotted $color.notes.border;
-	padding-left: 2.75rem
-	padding-right: 1.25rem
+	background-color: $color.note.background
+	border: 1px dotted $color.note.border;
 
 .note-wrap
 	width: 100%
 	height: 100%
 	min-height: 100%
 	max-height: 100%
-	margin-bottom: -($_note_foot_height)
+	margin-bottom: -($_note.foot.height)
 	&:after
 		content: ""
 		display: block
-		height: $_note_foot_height
+		height: $_note.foot.height
 
+
+/*! Notes: Head -------------------------------------------------------------- */
 .note_head
-	width: 100%
 	padding-top: 1.5em
+	padding-right: $_note.padding.right
 	padding-bottom: 1em
+	padding-left: $_note.padding.left
 	font-size: 1.125rem
 	font-weight: 300
 	& i
@@ -63,12 +72,70 @@ $_note_foot_height = 3rem
 	color: $color.link.default
 	&:hover
 		color: $color.link.hover
-	&:before
-		content: "+"
 
+
+/*! Notes: List -------------------------------------------------------------- */
 .note_list
+	font-family: $font.serif
 	list-style: none;
 	padding: 0
 
+.note_list_item
+	box-sizing: border-box
+	position: relative
+	padding-top: 1em
+	padding-right: $_note.padding.right
+	padding-bottom: 1.5em
+	padding-left: $_note.padding.left
+	border-top: 1px dashed $color.note.item.border
+
+.note_list_item_wrap
+	position: relative
+	display: inline-block
+	width: 100%
+
+.note_list_item_label
+	display: inline-block
+	width: 85%
+
+.note_list_item_btn_del
+	position: absolute
+	margin-top: -0.35rem
+	padding: 0
+	border: none
+	top: 50%
+	right: 0
+	transform: translateY(-50%)
+	color: $color.note.btn.item.del.text
+	background-color: transparent
+	font-size: 2rem
+	font-weight: 900
+	&:hover
+		color: $color.link.hover
+
+.note_list_item_edit
+	box-sizing: border-box
+	width: 100%
+
+/*! Notes: Footer ------------------------------------------------------------ */
 .note_foot
-	height: $_note_foot_height
+	height: $_note.foot.height
+	padding-right: $_note.padding.right
+	padding-left: $_note.padding.left
+	line-height: 2rem
+
+.note_foot_btn_today
+	width: 6.25em
+	border: 1px solid $color.note.btn.today.border
+	line-height: 2rem
+	background-color: $color.note.btn.today.background
+	&:hover
+		background-color: $color.link.hover
+		border-color: darken($color.link.hover, 30)
+
+.note_foot_count
+	font-family: $font.serif
+	font-size: 0.875rem
+	display: inline-block
+	float: right
+	color: $color.note.foot.count
