--- a/src/stylus/component/_base.styl
+++ b/src/stylus/component/_base.styl
@@ -19,7 +19,7 @@ body
 	color: $color.background.body
 	background-color: $color.background.selection
 
-#app
+.app
 	clearfix()
 	box-sizing: border-box
 	margin: 0 auto
