--- a/src/stylus/component/_notes.styl
+++ b/src/stylus/component/_notes.styl
@@ -128,6 +128,7 @@ $_note = {
 	width: 6.25em
 	border: 1px solid $color.note.btn.today.border
 	line-height: 2rem
+	text-align: center
 	background-color: $color.note.btn.today.background
 	&:hover
 		background-color: $color.link.hover
