--- a/src/stylus/component/_notes.styl
+++ b/src/stylus/component/_notes.styl
@@ -56,8 +56,9 @@ $_note = {
 	padding-left: $_note.padding.left
 	font-size: 1.125rem
 	font-weight: 300
-	& i
+	& b
 		font-weight: 700
+		padding-right: 0.325rem
 
 .note_head_btn_add
 	border: none;
