--- a/src/stylus/component/_base.styl
+++ b/src/stylus/component/_base.styl
@@ -4,6 +4,9 @@
 
 @require "../global/_all"
 
+*
+	outline: 0
+
 body
 	position: relative
 	background-color: $color.background.body
@@ -30,3 +33,6 @@ body
 	width: 100%
 	height: 100vh
 	overflow: hidden
+
+.hidden
+	display: none
